[package]
name = "malloced"
version = "1.0.0"
authors = ["Nikolai Vazquez <hello@nikolaivazquez.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nvzqz/malloced"
homepage = "https://github.com/nvzqz/malloced"
documentation = "https://docs.rs/malloced"
description = "A malloc-ed box pointer type."
categories = ["no-std", "memory-management", "api-bindings"]
keywords = ["malloc", "free", "c", "array", "ffi"]

[features]
default = ["std"]
std = []
pin = [] # MSRV: 1.33
